--- a/index.html
+++ b/index.html
@@ -4290,7 +4290,24 @@
                     <li><a href="index.html">Home</a></li>
 
                     <li><a href="https://calculadoradriftking-sombrafps.vercel.app/">Calculadora De Tuning</a></li>
-                    <li><a href="https://discord.gg/6NAgR7K6VQ" class="button primary">Discord</a></li>
+                    <li>
+                        <a href="#">Mecânica</a>
+                        <ul>
+                            <li><a
+                                    href="https://media.discordapp.net/attachments/1200602516929380432/1200864867670822972/BANNER_EXCLUSIVO_DRIFTKING_2.png?ex=65c7bb8f&is=65b5468f&hm=c13999b8f75a5287a917e64faa725b2f8f9674738baa8716daa66a36c2087c22&=&format=webp&quality=lossless&width=411&height=411">Valores
+                                    Tuning</a></li>
+                            <li><a
+                                    href="https://media.discordapp.net/attachments/1200602516929380432/1200864943545782332/BANNER_EXCLUSIVO_DRIFTKING.png?ex=65c7bba1&is=65b546a1&hm=aa6e09f4a6abf16ed3a5b841ab6a497d30eeb14fc5ec9af6d2137945b75f3cfa&=&format=webp&quality=lossless&width=411&height=411">Valores
+                                    Customização</a></li>
+                            <li><a
+                                    href="https://media.discordapp.net/attachments/1200602516929380432/1200864981604896909/Design_sem_nome_2.png?ex=65c7bbaa&is=65b546aa&hm=f1b9feae32ce2245c3de93c001542d515618f326378b96ba25075b41afc44c99&=&format=webp&quality=lossless&width=411&height=411">Valores
+                                    Reparo</a></li>
+                            <li><a href="https://discord.gg/6NAgR7K6VQ" class="button primary">Discord</a></li>
+                        </ul>
+                    </li>
+                </ul>
+                </li>
+
                 </ul>
             </nav>
         </header>
@@ -4320,19 +4337,21 @@
                     <div class="row">
                         <div class="col-4 col-12-medium">
                             <header>
-                                <h2>Desvende a Emoção do DriftKing - Sua Jornada Começa Aqui!</h2>
+                                <h2>DriftKing - Sua Jornada Começa Aqui!</h2>
 
                             </header>
                         </div>
                         <div class="col-4 col-12-medium">
-                            <p>Prepare-se para uma jornada emocionante com DriftKing, a mecanica de condução que desafia
-                                as normas e eleva a experiência automotiva a patamares inexplorados. Descubra a fusão
-                                perfeita entre potência e precisão, enquanto você desliza pelas pistas com maestria.</p>
+                            <p> A Mecânica Drift King procura novos membros para integrar nossa equipe dedicada, que vai
+                                além de colegas de trabalho, tornando-se uma família acolhedora. Destacamo-nos na cidade
+                                por valorizar a união e o respeito, essenciais para o sucesso. Oferecemos uniformes
+                                exclusivos, acreditando que a diversidade de talentos impulsiona nossa excelência.</p>
                         </div>
                         <div class="col-4 col-12-medium">
-                            <p>Sinta a adrenalina pulsando em suas veias enquanto você se prepara para a jornada
-                                eletrizante com DriftKing. Esta mecanica de condução vai além dos limites convencionais,
-                                oferecendo uma experiência automotiva que desafia todas as expectativas.</p>
+                            <p> Se busca fazer parte de uma equipe que valoriza trabalho em conjunto, respeito mútuo e
+                                crescimento profissional, venha para a Mecânica Drift King. Estamos ansiosos para
+                                receber novos membros e construir juntos um ambiente de trabalho incrível. Candidate-se
+                                e faça parte da nossa família!</p>
                         </div>
                     </div>
                 </div>
@@ -4349,11 +4368,14 @@
                 <header>
 
                 </header>
-                <p>Preparar-se para uma jornada emocionante com DriftKing significa abraçar a paixão pela condução em
-                    seu estado mais puro. Desafie-se a cada curva, e descubra um novo significado de liberdade nas
-                    pistas. DriftKing não é apenas uma mecanica de condução; é uma experiência que transcende o asfalto
-                    e se torna uma parte intrínseca do seu DNA automotivo. Você está pronto para a emoção única que só
-                    DriftKing pode proporcionar? A jornada começa agora.</p>
+                <p> Na Mecânica Drift King, somos mais do que uma equipe - somos uma família aberta e acolhedora, sempre
+                    pronta para receber novos membros. Nosso compromisso vai além do trabalho com veículos; estamos aqui
+                    para apoiar e ajudar uns aos outros em todos os momentos.
+
+                    Destacamo-nos como a única oficina na cidade que oferece uniformes exclusivos para nossa equipe,
+                    proporcionando um ambiente profissional e coeso. Acreditamos que a união e o respeito são
+                    fundamentais para alcançar o sucesso, e isso se reflete na nossa atmosfera amigável e colaborativa.
+                </p>
 
             </div>
             <a href="#three" class="goto-next scrolly">Next</a>
@@ -4365,13 +4387,14 @@
                     src="https://i.pinimg.com/originals/8e/1f/d6/8e1fd606540e1542cb8ffe1bf2bb0803.jpg" alt="" /></span>
             <div class="content">
 
-                <p>Nossos veículos, cuidadosamente selecionados para a mecanica de drift, não são apenas máquinas; são
-                    extensões do seu eu, projetadas para responder aos seus comandos mais sutis. Cada acelerada é uma
-                    sinfonia de potência, cada curva é uma obra-prima de precisão.
+                <p>Além disso, temos o privilégio de contar com o QG mais bem localizado da cidade. Nossa oficina está
+                    estrategicamente posicionada para facilitar o acesso, garantindo conveniência tanto para nossos
+                    clientes quanto para nossa equipe.
 
-                    DriftKing não é apenas uma experiência de condução; é uma jornada emocional e visual. É a celebração
-                    do equilíbrio entre a força bruta do motor e a delicadeza do controle preciso. É a busca implacável
-                    pela perfeição em cada manobra, em cada traço de fumaça deixado para trás.</p>
+                    Na Mecânica Drift King, não se trata apenas de trabalho, mas de paixão pelos veículos e pelo serviço
+                    excepcional. Se você procura fazer parte de uma equipe dedicada, apaixonada e pronta para enfrentar
+                    desafios, venha nos visitar. Estamos ansiosos para receber novos membros em nossa família automotiva
+                </p>
 
             </div>
             <a href="#four" class="goto-next scrolly">Next</a>
@@ -4382,12 +4405,12 @@
             <div class="container">
                 <header class="major">
                     <h2>Venha logo trabalhar conosco!</h2>
-                    <p>Entre em nosso DISCORD, e aguarde na call de RECRUTAMENTO!</p>
+                    <p>Acesse nosso formulário, e aguarde ser chamado para a DriftKing!</p>
                 </header>
 
                 <footer class="major">
                     <ul class="actions special">
-                        <li><a href="https://discord.gg/h4P29bdWjE" class="button">Recrutamento</a></li>
+                        <li><a href="https://discord.gg/AWBbTjvDp4" class="button">Formulário</a></li>
                     </ul>
                 </footer>
             </div>
@@ -5269,7 +5292,7 @@
     </script>
 
     <!-- Scripts -->
-    
+
 
 </body>
 
